--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>טיולי ירושלים</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div id="logo">טיולי ירושלים</div>
     <div class="logo.jpg-img-container">
-      <img src="logo.jpg" alt="לוגו טיולי ירושלים" class="logo">
+      <img src="./images/logo.jpg" alt="לוגו טיולי ירושלים" class="logo">
     </div>
   </header>
   
