new version type

--- a/index.html
+++ b/index.html
@@ -28,15 +28,21 @@
 <section class="services">
   <h2>המקצועיות שלנו</h2>
   <p>שירותי אבטחה רפואית - פאראמדיקים וחובשים</p>
-  <p>שירותי שמירה</p>
+  <p>כל סוגי שירותי השמירה</p>
   <p>מדריכי ומדריכות טיולים מקצועיים</p>
+  <p>חיבורי חשמל הגברה ומצלמות על ידי חשמלאי ראשי מוסמך </p>
   <p>Medical and Security Services</p>
 </section>
 
 <section class="description">
-  <p>אזורי שירות: ירושלים וסביבותיה. ניתן להזמין גם שירותים בפריסה ארצית.</p>
+             <h2>אזורי שירות:</h2>
+  <p> דרום ,מרכז , וירושלים וסביבותיה. </p>
+     <p>ניתן להזמין גם שירותים בפריסה ארצית.</p>
   <p>שירות ומחירים ללא תחרות.</p>
-  <p>החבילה כוללת את כל שירותי הטיולים - מהדרכה ועד אבטחה רפואית ושמירה.</p>
+  <p>אפשרות לכל שירותי הטיולים- מהדרכה מקצועית שירותי חשמל 
+    ועד אבטחה רפואית ושמירה.</p>
+   <h2>אפשרות לחשמלאי ראשי מוסמך לחיבורי חשמל בעת אירוע חוץ .</h2>
+    <p>אפשרות לטיולי ג'יפים במחיר טוב  .</p>
 </section>
 
 <section class="contacts">
@@ -95,6 +101,9 @@
         'images/8.jpg',
         'images/9.jpg',
         'images/10.jpg',
+        'images/12.jpg',
+        'images/13.jpg',
+        'images/logo.jpg',
       ];
       let currentImageIndex = 0;
 
@@ -110,10 +119,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <section class="gallery-wrapper">
-  <h2>ועוד קצת עלינו :)</h2>
+  <h2>ועוד קצת עלינו : </h2>
   <div class="gallery">
     <img id="image-slider" 
-    src="images/1.jpg" 
+    src= "images/11.jpg"
+    
+
     
     alt="תמונה מתוך טיולי ירושלים">
   </div>
@@ -121,8 +132,10 @@
 
 <div id="backToTop" onclick="window.scrollTo({top: 0, behavior: 'smooth'});">↑</div>
 <div class="gallery">
-  <img src="path/to/your-image.jpg" alt="Image description">
-  <img class="logo-overlay" src="path/to/logo.jpg" alt="Logo">
+  <img src="path/to/your-image.jpg" alt='images/12.jpg'>
+  <img class="logo-overlay"
+   src="images/logo.jpg" 
+  alt="Logo">
 </div>
 
 </body>
@@ -140,7 +153,8 @@
   <a href="https://www.itraveljerusalem.com/he/lobby/magazine" target="_blank">
    
     צפו בכתבה על המקומות הכי שקטים ומרגיעים בירושלים
-
   </a> וקבלו רעיונות לטיול בלתי נשכח.
-</p>
 
+  <h2> טיולי ירושלים בדרך לעוד לקוח מרוצה : </h2>
+
+</p>
