--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 <div id="backToTop" onclick="window.scrollTo({top: 0, behavior: 'smooth'});">↑</div>
 <div class="gallery">
-  <img src="path/to/your-image.jpg" alt='images/12.jpg'>
+  <img src="images/12.jpg" alt='image more about us'>
   <img class="logo-overlay"
    src="images/logo.jpg" 
   alt="Logo">
