--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <p>שירותי אבטחה רפואית - פאראמדיקים וחובשים</p>
   <p>כל סוגי שירותי השמירה</p>
   <p>מדריכי ומדריכות טיולים מקצועיים</p>
-  <p>חיבורי חשמל הגברה ומצלמות על ידי חשמלאי ראשי מוסמך </p>
+  <p>חיבורי חשמל והגברה על ידי חשמלאי ראשי מוסמך </p>
   <p>Medical and Security Services</p>
 </section>
 
