--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 
 
 
+
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My GitHub Pages</title>
+</head>
+<body>
+    <h1>Welcome to my GitHub Pages site!</h1>
+    <p>Visit my Box domain here: <a href="https://www.tripjeru.org.il" target="_blank">www.tripjeru.org.il</a></p>
+</body>
+</html>
+
+
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8" />
@@ -50,12 +64,12 @@
   <ul>
     <li><a href="tel:0584181598">☎ עומר (Omer): 058-418-1598</a></li>
    
-    <li><a href="mailto:jerusalemtrips@gmail.com">✉ jerusalemtrips@gmail.com</a></li>
+    <li><a href="mailto:tripjeru@gmail.com">✉ tripjeru@gmail.com</a></li>
   </ul>
 </section>
 
 <section class="gallery-wrapper">
-  <h2>גלריית תמונות</h2>
+  <h2>מתוך גלריית התמונות : </h2>
   <div class="gallery">
     <img id="image-slider" src="images/1.jpg" alt="תמונה מתוך טיולי ירושלים">
   </div>
