--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <title>My GitHub Pages</title>
 </head>
 <body>
-    <h1>Welcome to my GitHub Pages site!</h1>
-    <p>Visit my Box domain here: <a href="https://www.tripjeru.org.il" target="_blank">www.tripjeru.org.il</a></p>
+    <h1>Welcome </h1>
+    <p>הקישור החדש : <a href="https://www.tripjeru.org.il" target="_blank">www.tripjeru.org.il</a></p>
 </body>
 </html>
 
 
+<!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8" />
@@ -24,6 +25,7 @@
   <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="style.css" />
+  
 </head>
 <body>
   <header>
