--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header>
-    <div id="logo">טיולי ירושלים</div>
+    <div id="logo">ליווי ותכנון טיולים מקצועי</div>
     <div class="logo.jpg-img-container">
       <img src="./images/logo.jpg" alt="לוגו טיולי ירושלים" class="logo">
     </div>
@@ -39,20 +39,22 @@
 </section>
 
 <section class="description">
-             <h2>אזורי שירות:</h2>
-  <p> דרום ,מרכז , וירושלים וסביבותיה. </p>
-     <p>ניתן להזמין גם שירותים בפריסה ארצית.</p>
+             <h2>השירות שלנו:</h2>
+  <p> זמינות מלאה ללקוח לפי דרישה </p>
+     <p> מקצועיות בפריסה ארצית.</p>
   <p>שירות ומחירים ללא תחרות.</p>
-  <p>אפשרות לכל שירותי הטיולים- מהדרכה מקצועית שירותי חשמל 
-    ועד אבטחה רפואית ושמירה.</p>
-   <h2>אפשרות לחשמלאי ראשי מוסמך לחיבורי חשמל בעת אירוע חוץ .</h2>
+  <p>אפשרות לכל שירותי הטיולים- מהדרכה מקצועית ועד שירותי חשמל ראשי </p>
+  <p> ועד אבטחה רפואית ושמירה.</p>
+
+   <h2>אפשרות לתכנון והגשמת הטיול המתוכנן לפי דרישת הלקוח.</h2>
+   
     <p>אפשרות לטיולי ג'יפים במחיר טוב  .</p>
 </section>
 
 <section class="contacts">
   <h2>צרו קשר</h2>
   <ul>
-    <li><a href="tel:0584181598">☎ עומר (Omer): 058-418-1598</a></li>
+    <li><a href="tel:0584181598">☎ עומר (Omer):</a></li>
    
     <li><a href="mailto:tripjeru@gmail.com">✉ tripjeru@gmail.com</a></li>
   </ul>
