--- a/index.html 2.html
+++ b/index.html 2.html
@@ -3,12 +3,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages</title>
+    <title>טיולי ירושלים </title>
 </head>
 <body>
     <h1>Welcome </h1>
-    <p>הקישור החדש : <a href="https://www.tripjeru.org.il" target="_blank">www.tripjeru.org.il</a></p>
+    <p>: <a href="https://www.tripjeru.org.il" target="_blank"></a></p>
 </body>
 </html>
