--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         'images/12.jpg',
         'images/13.jpg',
         'images/logo.jpg',
+        'images/logo2.jpg',
       ];
       let currentImageIndex = 0;
 
