--- a/index.html
+++ b/index.html
@@ -27,15 +27,18 @@
 
 <section class="text-container">
   <h2>ברוכים הבאים לטיולי ירושלים</h2>
-  <p>כאן תמצאו את המקומות השקטים והמפתיעים ביותר בעיר הבירה ובאזור!</p>
+  <p>שירות אישי ומקצועי מותאם אישית לכל לקוח 24/6 </p>
+  <p>ניסיון רב של מספר שנים בתחום  </p>
+    <p>לקוחות רבים ומרוצים בתחום </p>
+    <p>גמישות בזמנים בעת הזמנות חדשות</p>
 </section>
 
 <section class="services">
   <h2>המקצועיות שלנו</h2>
-  <p>שירותי אבטחה רפואית - פאראמדיקים וחובשים</p>
-  <p>כל סוגי שירותי השמירה</p>
+  <p>שירותי אבטחה רפואית -מערים חובשים ופאראמדיקים </p>
+  <p>שמירה ואבטחה ברמה הגבוהה ביותר</p>
   <p>מדריכי ומדריכות טיולים מקצועיים</p>
-  <p>חיבורי חשמל והגברה על ידי חשמלאי ראשי מוסמך </p>
+  <p>אפשרות לטיולי שטח עם חיבורי חשמל והגברה על ידי חשמלאי ראשי מוסמך </p>
   <p>Medical and Security Services</p>
 </section>
 
@@ -49,11 +52,12 @@
 
    <h2>אפשרות לתכנון והגשמת הטיול המתוכנן לפי דרישת הלקוח.</h2>
    
-    <p>אפשרות לטיולי ג'יפים במחיר טוב  .</p>
+    <p>מחירים שווים לכל לקוח  .</p>
 </section>
 
 <section class="contacts">
   <h2>צרו קשר</h2>
+  <p>להזמנה והצעת מחיר בקלות ובמהירות .</p>
   <ul>
     <li><a href="tel:0584181598">☎ עומר (Omer):</a></li>
    
