--- a/index.html
+++ b/index.html
@@ -168,5 +168,5 @@
   </a> וקבלו רעיונות לטיול בלתי נשכח.
 
   <h2> טיולי ירושלים בדרך לעוד לקוח מרוצה : </h2>
- <p>כל הזכויות שמורות tripjeru</p>
+ <p>כל הזכויות שמורות ל  <tripjeru class="org il"></tripjeru></p>
 </p>
