--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 
 
 
-
-
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
@@ -59,7 +57,7 @@
   <h2>צרו קשר</h2>
   <p>להזמנה והצעת מחיר בקלות ובמהירות .</p>
   <ul>
-    <li><a href="tel:0584181598">☎ עומר (Omer):</a></li>
+    <li><a href="tel:0503251251">☎ עומר (Omer):</a></li>
    
     <li><a href="mailto:tripjeru@gmail.com">✉ tripjeru@gmail.com</a></li>
   </ul>
@@ -74,7 +72,7 @@
 
 <div id="modeToggle">מצב כהה / בהיר</div>
 
-<div id="whatsapp-chat" onclick="window.open('https://wa.me/972584181598', '_blank')">
+<div id="whatsapp-chat" onclick="window.open('https://wa.me/972503251251', '_blank')">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="וואטסאפ">
 </div>
 
@@ -164,9 +162,12 @@
 <p><strong>מחפשים השראה למסלול הבא?</strong>
   <a href="https://www.itraveljerusalem.com/he/lobby/magazine" target="_blank">
    
-    צפו בכתבה על המקומות הכי שקטים ומרגיעים בירושלים
-  </a> וקבלו רעיונות לטיול בלתי נשכח.
+    
+  </a>  קבלו כתבות ורעיונות לטיול בלתי נשכח
 
   <h2> טיולי ירושלים בדרך לעוד לקוח מרוצה : </h2>
- <p>כל הזכויות שמורות ל  <tripjeru class="org il"></tripjeru></p>
+ <p>כל הזכויות שמורות ל tripjeru @ </p>
+ 
+  <p>  <tripjeru class="org il"></www.tripjeru.org.il></p>
+
 </p>
