--- a/index.html 2.html
+++ b/index.html 2.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <h1>Welcome </h1>
+     <h1>שלום </h1>
+
+     
     <p>: <a href="https://www.tripjeru.org.il" target="_blank"></a></p>
 </body>
 </html>
